# powertools

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml  renovate.yml
script/: lint  test
src/powertools/: __init__.py
src/powertools/cli/: embed.py
src/powertools/core/: config.py  embeddings.py  memory.py
src/powertools/embed/: daemon.py  server.py
src/powertools/mcp/: memory.py  server.py  tasks.py
src/powertools/storage/: qdrant.py
src/powertools/templates/: compose.yaml
tests/: __init__.py  test_jsonl.py  test_tasks.py
